--- a/packages/hardhat-ts/package.json
+++ b/packages/hardhat-ts/package.json
@@ -37,7 +37,7 @@
     "@ethersproject/providers": "^5.5.3",
     "@ethersproject/solidity": "^5.5.0",
     "@ethersproject/units": "^5.5.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@tenderly/hardhat-tenderly": "^1.0.13",
