--- a/packages/hardhat-ts/package.json
+++ b/packages/hardhat-ts/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts ./helpers/**/*.ts",
     "solhint": "solhint ./contracts/**/*.sol",
     "format": "yarn prettier -w ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts ./helpers/**/*.ts contracts/**/*.sol ",
-    "format:check": "yarn prettier -c ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts ./helpers/**/*.ts ./contracts/**/*.sol "
+    "format:check": "yarn prettier -c ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts ./helpers/**/*.ts ./contracts/**/*.sol ",
+    "watch_test": "hardhat watch compilation & hardhat watch test"
   },
   "dependencies": {
     "@atixlabs/hardhat-time-n-mine": "^0.0.5",
@@ -49,6 +50,7 @@
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.9.29",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-watcher": "^2.1.1",
     "ipfs-http-client": "^54.0.2",
     "qrcode-terminal": "^0.12.0",
     "typechain": "^7.0.0"
