--- a/packages/vite-app-ts/.eslintrc
+++ b/packages/vite-app-ts/.eslintrc
@@ -148,7 +148,8 @@
     "eslint linebreak-style": "off",
     "object-curly-newline": "off",
     "no-shadow": "off",
-    "no-void": ["error", { "allowAsStatement": true }]
+    "no-void": ["error", { "allowAsStatement": true }],
+    "@typescript-eslint/no-unsafe-argument": "off"
   },
   "overrides": [
     {
