--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
             "packages/vite-app-ts",
             "packages/services/*",
             "packages/subgraph",
-            "packages/api"
+            "packages/backend"
         ]
     },
     "packageManager": "yarn@3.2.0",
