--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "watch-theme": "yarn workspace @scaffold-eth/react-app watch",
         "prepare": "husky install",
         "postinstall": "husky install",
-        "watch_test": "yarn workspace @scaffold-eth/hardhat watch_test"
+        "watch_test": "yarn workspace @scaffold-eth/hardhat watch_test",
+        "backend": "yarn workspace @scaffold-eth/backend serve"
     },
     "workspaces": {
         "packages": [
