--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "backend",
-  "packageManager": "yarn@3.2.0",
-  "dependencies": {
-    "next": "^12.1.5"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.30"
-  }
+    "name": "@scaffold-eth/backend",
+    "packageManager": "yarn@3.2.0",
+    "scripts": {
+        "serve": "nodemon app.ts"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.30",
+        "cors": "^2.8.5",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4"
+    },
+    "dependencies": {
+        "express": "^4.18.1"
+    }
 }
